# postgresql-simple

./: .travis.yml  CHANGES.md  README.md  appveyor.yml  cabal.haskell-ci  cabal.project  cabal.project.local.win  postgresql-simple.cabal
.github/workflows/: haskell-ci.yml  haskell.yml  simple.yml
src/Database/PostgreSQL/: Simple.hs
src/Database/PostgreSQL/Simple/: Compat.hs  Copy.hs  Cursor.hs  Errors.hs  FromField.hs  FromRow.hs  Internal.hs  Interval.hs  Newtypes.hs  Notification.hs  Ok.hs  Range.hs  SqlQQ.hs  Time.hs  ToField.hs  ToRow.hs  Transaction.hs  Types.hs
src/Database/PostgreSQL/Simple/HStore/: Implementation.hs
src/Database/PostgreSQL/Simple/Internal/: PQResultUtils.hs
src/Database/PostgreSQL/Simple/Time/: Implementation.hs
src/Database/PostgreSQL/Simple/Time/Internal/: Parser.hs  Printer.hs
test/: Exception.hs  Interval.hs  Main.hs  ParsingTemplate.hs  Time.hs
test/Database/PostgreSQL/Simple/: IntervalTest.hs
test/results/: malformed-input.expected
