cabal-version:      1.12
name:               postgresql-simple
version:            0.7.0.0
x-revision:         2
synopsis:           Mid-Level PostgreSQL client library
description:
  Mid-Level PostgreSQL client library, forked from mysql-simple.

license:            BSD3
license-file:       LICENSE
author:             Bryan O'Sullivan, Leon P Smith
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:
  (c) 2011 MailRank, Inc.
  (c) 2011-2018 Leon P Smith
  (c) 2018-2020 Oleg Grenrus

category:           Database
build-type:         Simple
extra-source-files:
  CHANGES.md
  CONTRIBUTORS
  test/results/malformed-input.expected
  test/results/unique-constraint-violation.expected

tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.2
   || ==9.10.1

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    Database.PostgreSQL.Simple
    Database.PostgreSQL.Simple.Arrays
    Database.PostgreSQL.Simple.Copy
    Database.PostgreSQL.Simple.Cursor
    Database.PostgreSQL.Simple.Errors
    Database.PostgreSQL.Simple.FromField
    Database.PostgreSQL.Simple.FromRow
    Database.PostgreSQL.Simple.HStore
    Database.PostgreSQL.Simple.HStore.Internal
    Database.PostgreSQL.Simple.Internal
    Database.PostgreSQL.Simple.LargeObjects
    Database.PostgreSQL.Simple.Newtypes
    Database.PostgreSQL.Simple.Notification
    Database.PostgreSQL.Simple.Ok
    Database.PostgreSQL.Simple.Range
    Database.PostgreSQL.Simple.SqlQQ
    Database.PostgreSQL.Simple.Time
    Database.PostgreSQL.Simple.Time.Internal
    Database.PostgreSQL.Simple.ToField
    Database.PostgreSQL.Simple.ToRow
    Database.PostgreSQL.Simple.Transaction
    Database.PostgreSQL.Simple.TypeInfo
    Database.PostgreSQL.Simple.TypeInfo.Macro
    Database.PostgreSQL.Simple.TypeInfo.Static
    Database.PostgreSQL.Simple.Types
    Database.PostgreSQL.Simple.Vector
    Database.PostgreSQL.Simple.Vector.Unboxed

  -- Other-modules:
  other-modules:
    Database.PostgreSQL.Simple.Compat
    Database.PostgreSQL.Simple.HStore.Implementation
    Database.PostgreSQL.Simple.Internal.PQResultUtils
    Database.PostgreSQL.Simple.Time.Implementation
    Database.PostgreSQL.Simple.Time.Internal.Parser
    Database.PostgreSQL.Simple.Time.Internal.Printer
    Database.PostgreSQL.Simple.TypeInfo.Types

  -- GHC bundled libs
  build-depends:
      base              >=4.12.0.0 && <4.21
    , bytestring        >=0.10.8.2 && <0.13
    , containers        >=0.6.0.1  && <0.8
    , template-haskell  >=2.14.0.0 && <2.23
    , text              >=1.2.3.0  && <1.3  || >=2.0 && <2.2
    , time-compat       >=1.9.5    && <1.12
    , transformers      >=0.5.6.2  && <0.7

  -- Other dependencies
  build-depends:
      aeson             >=2.1.2.1  && <2.3
    , attoparsec        >=0.14.4   && <0.15
    , case-insensitive  >=1.2.1.0  && <1.3
    , hashable          >=1.4.3.0  && <1.6
    , Only              >=0.1      && <0.1.1
    , postgresql-libpq  >=0.10.0.0 && <0.11
    , scientific        >=0.3.7.0  && <0.4
    , uuid-types        >=1.0.5    && <1.1
    , vector            >=0.13.0.0 && <0.14

  default-extensions:
    BangPatterns
    DoAndIfThenElse
    OverloadedStrings
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: http://github.com/haskellari/postgresql-simple

test-suite inspection
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Inspection.hs
  build-depends:
      base
    , inspection-testing  >=0.4.1.1 && <0.6
    , postgresql-libpq
    , postgresql-simple
    , tasty
    , tasty-hunit

test-suite test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Common
    Exception
    Interval
    Notify
    Serializable
    Time

  ghc-options:        -threaded
  ghc-options:        -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-extensions:
    NamedFieldPuns
    OverloadedStrings
    PatternGuards
    Rank2Types
    RecordWildCards
    ScopedTypeVariables

  build-depends:
      aeson
    , base
    , base16-bytestring
    , bytestring
    , case-insensitive
    , containers
    , cryptohash-md5     >=0.11.100.1 && <0.12
    , filepath
    , HUnit
    , postgresql-simple
    , tasty
    , tasty-golden
    , tasty-hunit
    , text
    , time-compat
    , vector

benchmark select
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Select.hs
  build-depends:
      base
    , postgresql-simple
    , vector
